deps/v8/test/message/let-asi-await-nonasync.out
*%(basename)s:8: SyntaxError: Unexpected number
  await 0;
        ^
SyntaxError: Unexpected number
